--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 <center>
-<font size="6"><a href=""><i></i></a><br></font>              
+<font size="6"><a href=""><i>Już wkrótce dodamy tu nowe książki!</i></a><br></font>                
 </br>
 <font size="6"><a href=""><i></i></a><br></font>
 </br>
@@ -44,6 +44,8 @@
 </br>
 <font size="6"><a href=""><i></i></a><br></font>
 </br>
+
+
 
 
 
