--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 <hr>
 
 <center>
-<header><center><font size="6">Katalog książek z działu - Klasyka<br>Kategorie:</center></font>
+<header><center><font size="6">Katalog książek z działu - klasyka<br>Kategorie:</center></font>
 <hr>
 </br>
 
 
 <center>
-<font size="6"><a href="https://thematx7.github.io/4lo-blogoslawiona-wina/"><i>Błogosławiona Wina</i></a><br></font>                
+<font size="6"><a href="https://thematx7.github.io/4lo-blogoslawiona-wina/"><i>Błogosławiona wina</i></a><br></font>                
 </br>
 <font size="6"><a href=""><i></i></a><br></font>
 </br>
